# robotic-map

./: README.md
docs/: UserManual.odt
map/: AbstractTracker.cpp  AbstractTracker.h  CMakeLists.txt  ConfigurationLoader.cpp  ConfigurationLoader.h  CrosshairLayer.cpp  CrosshairLayer.h  DynamicObject.h  DynamicObjectsLayer.cpp  DynamicObjectsLayer.h  GeoCoords.cpp  GeoCoords.h  GeoLocalMapReceiver.cpp  GeoLocalMapReceiver.h  GeoMapSender.cpp  GeoMapSender.h  GeoObjectID.cpp  GeoObjectID.h  GeoObjectsManager.cpp  GeoObjectsManager.h  GuiController.cpp  GuiController.h  IGeoMap.h  IGeoMapFwd.h  IMapSignalReceiver.h  ISensorReadings.cpp  ISensorReadings.h  IconConfiguration.h  InternalTypesFwd.h  LaserCloudLayer.cpp  LaserCloudLayer.h  LaserScanPoint.h  Layers.cpp  Layers.h  LocalMapLayer.cpp  LocalMapLayer.h  LocalMapLoader.cpp  LocalMapLoader.h  LocalMapLogic.cpp  LocalMapLogic.h  (+95 more)
map/localmap/: bucharest.kml  localMap.cfg
map/qml/: DefaultWindow.qml  GpsPanel.qml  LicensePanel.qml  MapButton.qml  MapEditWindow.qml  MapInfoPanel.qml  MapInfoPanelArrow.qml  MapItem.qml  MapStyle.qml  MyButton.qml  PlacemarkListWindow.qml  PlacesList.qml  RobotEditWindow.qml  SensorDataItem.qml
rosmapinterface/: CMakeLists.txt  README.md  package.xml
rosmapinterface/msg/: RobotInformation.msg  WaypointInformation.msg
rosmapinterface/src/: fakeRobot.cpp  lasersubscriber.cpp  lasersubscriber.h  main.cpp  peoplesubscriber.cpp  peoplesubscriber.h  res.qrc  robotlistener.cpp  robotlistener.h  wrap.qml
